--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,18 +11,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      # Checkout code
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Terraform
+      # Log in to Azure using secrets
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+
+      # Set up Terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.9.5   # (or the version you are using)
 
+      # Initialize Terraform
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -input=false
 
+      # Validate Terraform
+      - name: Terraform Validate
+        run: terraform validate
+
+      # Plan Terraform
       - name: Terraform Plan
-        run: terraform plan
+        run: terraform plan -input=false
 
+      # Apply (only on main branch, can comment out while testing)
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main'
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -input=false
